dep-ab-testing-v2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chrome-app-v2
spec:
  replicas: 4
  selector:
    matchLabels:
      app: my-app
      version: v2
  template:
    metadata:
      labels:
        app: my-app
        version: v2
    spec:
      containers:
      - name: my-app
        image: eyesoncloud/webapp:v2
        ports:
        - containerPort: 80
