deployment-webserver.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-server
spec:
  replicas: 4
  selector:
    matchLabels:
      tier: web-server
  template:
    metadata:
      labels:
        tier: web-server
    spec:
      containers:
      - name: web-server-container
        image: nginx:1.21
