pod-multi-container.yml
apiVersion: v1
kind: Pod
metadata:
  name: multi-container-pod
spec:
  containers:
  - name: container1
    image: nginx
    ports:
    - containerPort: 80

  - name: container2
    image: redis
    ports:
    - containerPort: 6379

  - name: container3
    image: memcached:1.6
    ports:
    - containerPort: 11211

  - name: debug
    image: busybox
    command: ["sh", "-c", "sleep 3600"]
