storage-emptydir.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mtdir-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mtdir
  template:
    metadata:
      labels:
        app: mtdir
    spec:
      containers:
      - name: myvolumes-container
        image: alpine
        command: ["sh", "-c", "echo The Bench Container 1 is Running ; sleep 3600"]
        volumeMounts:
        - mountPath: /demo
          name: demo-volume
      volumes:
      - name: demo-volume
        emptyDir: {}
