deployment-bluegreen-service.yml
apiVersion: v1
kind: Service
metadata:
  name: np-service
spec:
  type: NodePort
  selector:
    app: webserver
    ver: green
  ports:
  - protocol: TCP
    nodePort: 30010
    port: 80
    targetPort: 80
