db-allow-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-payments-to-db
spec:
  podSelector:
    matchLabels:
      app: bookstore-db
      role: database
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: payments
          role: backend
    ports:
    - protocol: TCP
      port: 5432
