deny-all-ingress-to-db.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-ingress-to-db
spec:
  podSelector:
    matchLabels:
      app: bookstore-db
      role: database
  policyTypes:
  - Ingress
  ingress: []
